--- a/public/css/main.css
+++ b/public/css/main.css
@@ -313,32 +313,8 @@ body {
  .contenedores {
     display: inline-block;
  }
-/*
- .celeste{
-     background-color: #150080 !important;
-     color: #FFFFFF !important;
-     font-size: 24px !important;
+
+ .rdcolor {
+    background-color: #007ff5;
+    border-radius: 30;
  }
-
-.rojo{
-    background-color: #ff0404 !important;
-    color: #FFFFFF !important;
-    font-size: 24px !important;
-}
-
-.gris{
-    background-color: #fafafa !important;
-    font-size: 24px !important;
-}
-
-.blanco{
-    font-size: 24px !important;
-}
-
-.tpdf{
-    font-size: 1.5rem;
-}
-
-.th-gris{
-    background: #ffffff !important;
-}*/
